--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,14 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical"
         android:fillViewport="true"
+        android:orientation="vertical"
         tools:context=".MainActivity">
 
         <LinearLayout
@@ -21,12 +20,12 @@
                 android:id="@+id/mainText"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/mainht"
-                android:text="@string/mainmsg"
-                android:textSize="@dimen/txtsize"
-                android:gravity="center"
-                android:textColor="@color/black"
                 android:layout_marginTop="@dimen/mainMargin"
                 android:layout_marginBottom="@dimen/mainMargin"
+                android:gravity="center"
+                android:text="@string/mainmsg"
+                android:textColor="@color/black"
+                android:textSize="@dimen/txtsize"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -36,40 +35,40 @@
                 android:id="@+id/imgLogin"
                 android:layout_width="150dp"
                 android:layout_height="150dp"
-                android:scaleType="centerCrop"
                 android:layout_gravity="center"
                 android:layout_marginBottom="@dimen/mainMargin"
+                android:scaleType="centerCrop"
                 android:src="@drawable/ic_main" />
 
             <EditText
                 android:id="@+id/userName"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/mainht"
-                android:hint="@string/userName"
-                android:textColor="@color/black"
-                android:maxLines="1"
                 android:layout_marginTop="@dimen/margins"
-                android:inputType="text" />
+                android:hint="@string/userName"
+                android:inputType="text"
+                android:maxLines="1"
+                android:textColor="@color/black" />
 
             <EditText
                 android:id="@+id/userPass"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/mainht"
-                android:hint="@string/userPass"
-                android:textColor="@color/black"
-                android:maxLines="1"
                 android:layout_marginBottom="@dimen/margins"
-                android:inputType="textPassword" />
+                android:hint="@string/userPass"
+                android:inputType="textPassword"
+                android:maxLines="1"
+                android:textColor="@color/black" />
 
             <Button
                 android:id="@+id/btnSubmit"
                 android:layout_width="150dp"
                 android:layout_height="@dimen/mainht"
-                android:gravity="center"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/margins"
+                android:gravity="center"
                 android:text="@string/btnSubmit"
-                android:textSize="20sp"
-                android:layout_marginTop="@dimen/margins" />
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
 </layout>
