--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,7 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
     <ScrollView
@@ -17,23 +15,24 @@
             tools:context=".SecondActivity">
 
             <TextView
+                android:id="@+id/msgWelcome"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/mainht"
-                android:id="@+id/msgWelcome"
-                android:text="@string/msgWlcm"
-                android:textSize="@dimen/txtsize2"
                 android:gravity="center"
-                android:textColor="@color/black" />
+                android:text="@string/msgWlcm"
+                android:textColor="@color/black"
+                android:textSize="@dimen/txtsize2" />
 
             <TextView
                 android:id="@+id/msgNote"
                 android:layout_width="match_parent"
                 android:layout_height="45sp"
-                android:gravity="center"
                 android:layout_margin="20dp"
+                android:fontFamily="sans-serif-medium"
+                android:gravity="center"
                 android:text="@string/msgNote"
-                android:textSize="@dimen/noteSize"
-                android:fontFamily="sans-serif-medium" />
+                android:textSize="@dimen/noteSize" />
+
             <TableLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
@@ -48,16 +47,17 @@
                         android:text="@string/enterName"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
+
                     <EditText
-                        android:layout_weight="2"
+                        android:id="@+id/enterName"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginRight="3dp"
+                        android:layout_weight="2"
                         android:hint="@string/enterName"
                         android:inputType="text"
                         android:maxLines="1"
-                        android:layout_marginRight="3dp"
-                        android:textColor="@color/black"
-                        android:id="@+id/enterName"/>
+                        android:textColor="@color/black" />
                 </TableRow>
 
                 <TableRow>
@@ -70,103 +70,112 @@
                         android:text="@string/enterEmail"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
+
                     <EditText
-                        android:layout_weight="2"
+                        android:id="@+id/enterEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/enterEmail"
-                        android:maxLines="1"
                         android:layout_marginRight="3dp"
+                        android:layout_weight="2"
+                        android:hint="@string/enterEmail"
                         android:inputType="textEmailAddress"
-                        android:textColor="@color/black"
-                        android:id="@+id/enterEmail"/>
+                        android:maxLines="1"
+                        android:textColor="@color/black" />
                 </TableRow>
 
                 <TableRow>
+
                     <TextView
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/enterDOB"
                         android:layout_marginLeft="3dp"
+                        android:layout_weight="1"
+                        android:text="@string/enterDOB"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
+
                     <EditText
-                        android:layout_weight="2"
+                        android:id="@+id/enterDOB"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/hintDOB"
-                        android:maxLines="1"
                         android:layout_marginRight="3dp"
+                        android:layout_weight="2"
+                        android:hint="@string/hintDOB"
                         android:inputType="date"
                         android:maxLength="10"
-                        android:textColor="@color/black"
-                        android:id="@+id/enterDOB"/>
+                        android:maxLines="1"
+                        android:textColor="@color/black" />
                 </TableRow>
 
                 <TableRow>
+
                     <TextView
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/enterPhone"
                         android:layout_marginLeft="3dp"
+                        android:layout_weight="1"
+                        android:text="@string/enterPhone"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
+
                     <EditText
-                        android:layout_weight="2"
+                        android:id="@+id/enterPhone"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/enterPhone"
-                        android:maxLines="1"
                         android:layout_marginRight="3dp"
+                        android:layout_weight="2"
+                        android:hint="@string/enterPhone"
                         android:inputType="number"
                         android:maxLength="10"
-                        android:textColor="@color/black"
-                        android:id="@+id/enterPhone"/>
+                        android:maxLines="1"
+                        android:textColor="@color/black" />
                 </TableRow>
 
                 <TableRow>
+
                     <TextView
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
+                        android:layout_marginLeft="3dp"
+                        android:layout_weight="1"
                         android:text="@string/enterCity"
-                        android:layout_marginLeft="3dp"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
+
                     <EditText
-                        android:layout_weight="2"
+                        android:id="@+id/enterCity"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/enterCity"
-                        android:maxLines="1"
                         android:layout_marginRight="3dp"
+                        android:layout_weight="2"
+                        android:hint="@string/enterCity"
                         android:inputType="text"
-                        android:textColor="@color/black"
-                        android:id="@+id/enterCity"/>
+                        android:maxLines="1"
+                        android:textColor="@color/black" />
                 </TableRow>
 
                 <TableRow>
+
                     <TextView
-                        android:layout_weight="1"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="@string/enterPin"
                         android:layout_marginLeft="3dp"
+                        android:layout_weight="1"
+                        android:text="@string/enterPin"
                         android:textColor="@color/black"
                         android:textSize="16sp" />
+
                     <EditText
-                        android:layout_weight="2"
+                        android:id="@+id/enterPin"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:hint="@string/enterPin"
-                        android:maxLines="1"
                         android:layout_marginRight="3dp"
+                        android:layout_weight="2"
+                        android:hint="@string/enterPin"
                         android:inputType="number"
                         android:maxLength="6"
-                        android:textColor="@color/black"
-                        android:id="@+id/enterPin"/>
+                        android:maxLines="1"
+                        android:textColor="@color/black" />
                 </TableRow>
 
                 <TableRow>
@@ -182,10 +191,10 @@
                         android:textSize="16sp" />
 
                     <RadioGroup
-                        android:layout_weight="2"
-                        android:weightSum="3"
                         android:id="@+id/radiogrp"
-                        android:orientation="vertical">
+                        android:layout_weight="2"
+                        android:orientation="vertical"
+                        android:weightSum="3">
 
                         <RadioButton
                             android:id="@+id/gMale"
@@ -197,55 +206,55 @@
                             android:textSize="16sp" />
 
                         <RadioButton
+                            android:id="@+id/gFemale"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="2"
                             android:text="@string/gFemale"
                             android:textColor="@color/black"
-                            android:textSize="16sp"
-                            android:id="@+id/gFemale"/>
+                            android:textSize="16sp" />
 
                         <RadioButton
+                            android:id="@+id/gOther"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="2"
                             android:text="@string/gOther"
                             android:textColor="@color/black"
-                            android:textSize="16sp"
-                            android:id="@+id/gOther"/>
+                            android:textSize="16sp" />
                     </RadioGroup>
                 </TableRow>
             </TableLayout>
 
             <EditText
+                android:id="@+id/txtOther"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/txtOther"
-                android:hint="@string/enterOther"
                 android:layout_marginLeft="3dp"
                 android:layout_marginRight="3dp"
-                android:maxLines="1"
+                android:hint="@string/enterOther"
                 android:inputType="text"
+                android:maxLines="1"
                 android:textColor="@color/black" />
 
             <CheckBox
+                android:id="@+id/terms"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/margins"
                 android:gravity="fill_vertical"
-                android:id="@+id/terms"
-                android:text="@string/checkTerms"
-                android:layout_marginTop="@dimen/margins" />
+                android:text="@string/checkTerms" />
 
             <Button
                 android:id="@+id/btnSubmit2"
                 android:layout_width="150dp"
                 android:layout_height="@dimen/mainht"
-                android:gravity="center"
                 android:layout_gravity="center"
+                android:layout_marginTop="@dimen/margins"
+                android:gravity="center"
                 android:text="@string/btnSubmit"
-                android:textSize="18sp"
-                android:layout_marginTop="@dimen/margins"/>
+                android:textSize="18sp" />
         </LinearLayout>
     </ScrollView>
 </layout>
